--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-sans: var(--font-saira);
   --font-mono: var(--font-geist-mono);
 }
 
@@ -22,5 +22,17 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: var(--font-playfair), serif;
+  font-family: var(--font-saira), serif;
+}
+
+@media print {
+  * {
+    -webkit-print-color-adjust: exact !important;
+    print-color-adjust: exact !important;
+    color-adjust: exact !important; /* older syntax for compatibility */
+  }
+
+  body {
+    background-color: white !important;
+  }
 }
